--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "next": "14.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "qrcode": "^1.5.3",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "@types/node": "20.11.0",
