--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tae-full-devsite",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,19 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "qrcode": "^1.5.3",
+    "@next/eslint-plugin-next": "^15.5.9",
+    "@types/fabric": "^5.3.10",
+    "@types/qrcode": "^1.5.6",
+    "@woocommerce/woocommerce-rest-api": "^1.0.1",
+    "fabric": "^6.9.0",
+    "lucide-react": "^0.556.0",
+    "next": "^15.5.9",
+    "next-auth": "^5.0.0-beta.30",
+    "qrcode": "^1.5.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sharp": "^0.33.2"
   },
   "devDependencies": {
-    "@types/node": "20.11.0",
-    "@types/react": "18.2.39",
-    "@types/react-dom": "18.2.17",
-    "autoprefixer": "10.4.17",
-    "postcss": "8.4.33",
-    "tailwindcss": "3.4.1",
-    "typescript": "5.3.3"
+    "@types/node": "^22.9.3",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
+    "typescript": "^5.6.3"
   }
 }
