--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/fabric": "^5.3.10",
     "@types/qrcode": "^1.5.6",
     "@woocommerce/woocommerce-rest-api": "^1.0.1",
+    "ag-psd": "^29.0.0",
     "fabric": "^6.9.0",
     "lucide-react": "^0.556.0",
     "next": "14.2.35",
