--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@next/eslint-plugin-next": "14.2.35",
     "@types/fabric": "^5.3.10",
+    "@types/nodemailer": "^7.0.4",
     "@types/qrcode": "^1.5.6",
     "@woocommerce/woocommerce-rest-api": "^1.0.1",
     "ag-psd": "^29.0.0",
     "fabric": "^6.9.0",
     "lucide-react": "^0.556.0",
     "next": "14.2.35",
+    "nodemailer": "^7.0.12",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
