--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,12 @@ pnpm-debug.log*
 # Build artifacts
 *.zip
 artkey-rest-api-folder/
+# Local environment files
+local.env/
+*.local.env
+.env
+.env.*
+*.env
+*.local.env
+.local.env
+local.env
