Add media helper, ArtKey features, enhanced components, and documentation
- Add lib/media.ts for WordPress media URL abstraction
- Add ArtKey public portal and owner management pages
- Add API routes for ArtKey functionality
- Update components to use mediaUrl() helper (Hero, Testimonials)
- Fix Design Editor 'add to canvas' functionality
- Update next.config.js for image domains
- Enhance .gitignore for environment file protection
- Add comprehensive documentation
- Remove duplicate schema file

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
-WP_API_BASE=https://your-wp-site.com/wp-json
-WP_APP_USER=your-wp-app-username
-WP_APP_PASS=your-wp-app-password
+# Database
+DATABASE_URL="file:./dev.db"
+
+# WordPress (optional, for backward compatibility)
+WP_API_BASE=
+WP_APP_USER=
+WP_APP_PASS=
+
+# Site URL
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
