--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,14 @@ node_modules/
 .turbo/
 dist/
 out/
+
+# Environment files - NEVER COMMIT THESE
 .env
 .env.local
 .env.*.local
-.DS_Store
+.env.production
+.env.development
+.env.test
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -24,3 +28,12 @@ local.env/
 *.local.env
 .local.env
 local.env
+
+# Database
+*.db
+*.db-journal
+prisma/dev.db
+prisma/dev.db-journal
+
+# Uploads
+public/uploads/
