--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev",
+    "db:studio": "prisma studio"
   },
   "dependencies": {
     "@types/fabric": "^5.3.10",
@@ -18,6 +22,8 @@
     "lucide-react": "^0.556.0",
     "next": "14.2.35",
     "nodemailer": "^7.0.12",
+    "prisma": "^5.20.0",
+    "@prisma/client": "^5.20.0",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
