--- a/package.json
+++ b/package.json
@@ -13,21 +13,24 @@
     "db:studio": "prisma studio"
   },
   "dependencies": {
+    "@prisma/client": "^5.20.0",
     "@types/fabric": "^5.3.10",
     "@types/nodemailer": "^7.0.4",
     "@types/qrcode": "^1.5.6",
     "@woocommerce/woocommerce-rest-api": "^1.0.1",
     "ag-psd": "^29.0.0",
     "fabric": "^6.9.0",
+    "konva": "^10.0.12",
     "lucide-react": "^0.556.0",
     "next": "14.2.35",
     "nodemailer": "^7.0.12",
     "prisma": "^5.20.0",
-    "@prisma/client": "^5.20.0",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sharp": "^0.33.2"
+    "react-konva": "^19.2.1",
+    "sharp": "^0.33.2",
+    "use-image": "^1.1.4"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^16.1.1",
