--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-dom": "^18.3.1",
     "react-konva": "^19.2.1",
     "sharp": "^0.33.2",
-    "use-image": "^1.1.4"
+    "use-image": "^1.1.4",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^16.1.1",
