--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^5.20.0",
     "@types/fabric": "^5.3.10",
     "@types/nodemailer": "^7.0.4",
+    "@types/pdfkit": "^0.13.8",
     "@types/qrcode": "^1.5.6",
     "ag-psd": "^29.0.0",
     "fabric": "^6.9.0",
@@ -23,6 +24,7 @@
     "lucide-react": "^0.556.0",
     "next": "14.2.35",
     "nodemailer": "^7.0.12",
+    "pdfkit": "^0.15.2",
     "prisma": "^5.20.0",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
