--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,10 @@
     ".next/types/**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "temp_*.tsx",
+    "temp_*.ts",
+    "*.backup",
+    "*.backup.*"
   ]
 }
