Clean repo: remove temp files, fix build errors, add gitignore rules, configure next.config.js for clean builds

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,10 @@ prisma/dev.db-journal
 
 # Uploads
 public/uploads/
+
+# Temp and backup files
+temp_*.tsx
+temp_*.ts
+*.backup
+*.backup.*
+types/*.backup
