--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,10 +34,6 @@
     ".next/types/**/*.ts"
   ],
   "exclude": [
-    "node_modules",
-    "temp_*.tsx",
-    "temp_*.ts",
-    "*.backup",
-    "*.backup.*"
+    "node_modules"
   ]
 }
