Complete editor redesign with Gelato-style features: shapes, graphics, templates, backgrounds, alignment, zoom, filters, foil effects, snap-to-grid, and brand color palette

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,13 @@
 # Database
 DATABASE_URL="file:./dev.db"
 
-# WordPress (optional, for backward compatibility)
-WP_API_BASE=
-WP_APP_USER=
-WP_APP_PASS=
+# Gelato Print API
+GELATO_API_KEY=your_gelato_api_key_here
+
+# WordPress REST API (for file uploads and WooCommerce)
+WP_API_BASE=https://your-site.com/wp-json
+WP_APP_USER=your_wp_app_username
+WP_APP_PASS=your_wp_app_password
 
 # Site URL
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
