--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.556.0",
     "next": "14.2.35",
     "nodemailer": "^7.0.12",
+    "pdfkit": "^0.17.2",
     "prisma": "^5.20.0",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
