--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@prisma/client": "^6.19.2",
     "@types/fabric": "^5.3.10",
     "@types/nodemailer": "^7.0.4",
     "@types/pdfkit": "^0.13.8",
     "@types/qrcode": "^1.5.6",
     "ag-psd": "^29.0.0",
-    "sql.js": "^1.11.0",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
     "fabric": "^6.9.0",
@@ -29,20 +29,22 @@
     "next": "14.2.35",
     "nodemailer": "^7.0.12",
     "pdfkit": "^0.15.2",
+    "prisma": "^6.19.2",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-konva": "^18.2.14",
     "sharp": "^0.33.2",
+    "sql.js": "^1.11.0",
     "use-image": "^1.1.4",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^16.1.1",
-    "@types/sql.js": "^1.4.9",
     "@types/node": "^22.9.3",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/sql.js": "^1.4.9",
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.31.8",
     "eslint": "^8.57.1",
